--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body class="ltr">
-    <app-root></app-root>
+    <app-root>
+        
+    </app-root>
     <script src="https://checkout.stripe.com/checkout.js"></script>
     <!-- facebook chat section start -->
     <div id="fb-root"></div>
